--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,56 @@
-.App {
-  text-align: center;
+*{
+  margin: 0;
+  padding: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.outerDivContainer{
+  width: 100%;
+  height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
-
-.App-link {
-  color: #61dafb;
+.outerDiv{
+  width: 97%;
+  height: 97%;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.formContainer{
+width: 100%;
+height: 10%;
+display: flex;
+justify-content: end;
+align-items: center;
+}
+.formContainer form{
+  width: 40%;
+  padding: 0 10px;
+  height: 80%;
+  border-radius: 30px;
+  background-color: rgb(0 143 251);
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  font-size: 20px;
+}
+.formContainer form label{
+color: white;
+}
+.formContainer form input{
+  width: 30%;
+  border-radius: 20px;
+  padding: 10px;
+  outline: none;
+  border: none;
+}
+.chartsContainer{
+width: 100%;
+height: 90%;
+display: flex;
+flex-wrap: wrap;
+justify-content: space-between;
+align-items: center;
+}
+.charts{
+  width:48%;
+  height:45%;
 }
